bindata/assets/kueue-operator/networkpolicy/operand/01-allow-egress-api.yaml
# allow outbound traffic to kube-apiserver from kueue operand pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-allow-egress-kube-apiserver
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kueue
      control-plane: controller-manager
  egress:
  - ports:
    - protocol: TCP
      port: 6443  # we can not use a name because it is not on the pod network
  policyTypes:
  - Egress
