bindata/assets/kueue-operator/networkpolicy/operand/02-allow-egress-cluster-dns.yaml
# allow traffic to cluster DNS service from kueue operand pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-allow-egress-cluster-dns
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kueue
      control-plane: controller-manager
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: dns-tcp
    - protocol: UDP
      port: dns
  policyTypes:
  - Egress
