bindata/assets/kueue-operator/networkpolicy/operand/05-allow-ingress-metrics.yaml
# allow ingress traffic to metrics endpoint on kueue operand pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-allow-ingress-metrics
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kueue
      control-plane: controller-manager
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift.io/cluster-monitoring: "true"
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 8443
  policyTypes:
  - Ingress
